updated jquerys were the fix. Now, I change the font-size of inputs to prevent zoom in on mobile devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -253,6 +253,10 @@ div .navbar-collapse .collapse .pull-right {
   h1 {
     font-size: 10vw !important;
   }
+
+  input {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (min-width: 801px) {
